--- a/app/src/main/res/layout/activity_breja.xml
+++ b/app/src/main/res/layout/activity_breja.xml
@@ -154,18 +154,15 @@
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:layout_height="220dp"
+                android:background="@color/colorMarromEdt"
                 android:layout_marginTop="@dimen/activity_vertical_margin_small"
-                android:layout_marginBottom="@dimen/activity_vertical_margin_small"
-                android:padding="@dimen/activity_vertical_margin"
-                android:background="@color/colorMarromEdt">
+                android:layout_marginBottom="@dimen/activity_vertical_margin_small">
 
                 <android.support.v4.view.ViewPager
                     android:id="@+id/viewBrejas"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent">
 
                 </android.support.v4.view.ViewPager>
 
