--- a/app/src/main/res/layout/item_breja_relacionado.xml
+++ b/app/src/main/res/layout/item_breja_relacionado.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="170dp"
+    android:layout_height="match_parent"
+    android:padding="6dp"
     android:background="@color/colorMarromEdt"
     android:gravity="center_vertical|center_horizontal"
     android:id="@+id/container">
@@ -47,7 +47,7 @@
                     android:layout_height="wrap_content"
                     android:text="Guinness Draught"
                     style="@style/NameBeer"
-                    android:maxLines="3"
+                    android:maxLines="2"
                     android:textAlignment="center"/>
 
                 <TextView
