--- a/app/src/main/res/layout/view_breja_relacionada_grid.xml
+++ b/app/src/main/res/layout/view_breja_relacionada_grid.xml
@@ -2,12 +2,16 @@
 <android.support.v7.widget.GridLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:grid="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent"
-    android:layout_height="@dimen/pager_rel_min_height"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:padding="@dimen/activity_horizontal_margin_small"
     grid:orientation="horizontal"
-    android:background="@color/colorMarromEdt"
     grid:alignmentMode="alignBounds"
-    grid:columnCount="1"
+    grid:columnCount="2"
+    android:layout_columnWeight="1"
+    grid:layout_columnWeight="1"
+    grid:rowCount="1"
     grid:rowOrderPreserved="false"
-    grid:useDefaultMargins="true"/>
+    grid:useDefaultMargins="true">
+
+</android.support.v7.widget.GridLayout>
